# rimc

./: .gitignore  Cargo.toml  LICENSE.BSD-3  README.md  rustfmt.toml
cpp/: Makefile  main.cpp
python/: pysimc.py
src/: main.rs
