[package]
name = "rsimc"
version = "0.1.0"
edition = "2021"
authors = [
    "David Kalliecharan"
]
readme = "README.md"
license = "BSD-2-Clause"

repository = "https://github.com/definedata/rsimc"

description = "A rust simulator for Monte Carlo systems"

keywords = ["simulation", "math"]
categories = ["algorithms", "science"]

[lib]
name = "rsimc"
bench = false
test = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
clap = { version = "4.5.4", features = ["derive"] }
ndarray = "0.15.6"
num-traits = "0.2.18"
pcg = "4.1.0"
rand = "0.8.5"
